<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    tools:context=".activities.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_1sdp"
            android:text="@string/welcome_back"
            android:textColor="#B6A79A"
            android:textSize="@dimen/_25sdp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/login_to_continue"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal" />
        <EditText
            android:id="@+id/emailentry"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/enter_email"
            android:textSize="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_1sdp"
            android:background="@color/input_background"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textColor="@color/black"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/passwordentry"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/enter_password"
            android:textSize="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@color/input_background"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textColor="@color/black"
            android:imeOptions="actionDone"
            android:inputType="textPassword"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonsignin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/sign_in"
            app:cornerRadius="@dimen/_20sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/createnewaccount"
            android:text="@string/create_new_account"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_15sdp"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="@color/secondary_text"/>


    </LinearLayout>

</ScrollView>